[package]
name = "microbench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
